<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bluebuddy.activities.BoatCharterAdvFormActivity"
    android:gravity="left"
    android:focusableInTouchMode="true"
    android:weightSum="100">

    <include layout="@layout/navbar_blue"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/cmnbg"
        android:layout_weight="92">

<ScrollView
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="1dp"
            android:layout_weight="84"
            android:orientation="vertical"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <com.bluebuddy.classes.MyTextView
                    android:id="@+id/idtxt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_bcadv"
                    android:textColor="#000000"
                    android:textSize="26sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="5dp"
                    android:background="#757575" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="left|center_horizontal"
                android:orientation="vertical">

                <com.bluebuddy.classes.MyTextView
                    android:id="@+id/idtxt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_bcadvf1"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/bcadname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/txt_bcadvf2"
                    android:lines="1"
                    android:inputType="text"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="5dp"
                    android:background="#757575" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:gravity="left|center_horizontal"
                android:orientation="vertical">

                <com.bluebuddy.classes.MyTextView
                    android:id="@+id/idtxt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_bcadvf3"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/cp3cnum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/txt_bcadvf7"
                    android:inputType="textEmailAddress"
                    android:maxLength="10"
                    android:lines="1"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="5dp"
                    android:background="#757575" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="left|center_horizontal"
                android:orientation="vertical">

                <com.bluebuddy.classes.MyTextView
                    android:id="@+id/idtxt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_t7"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/cp3clvl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/txt_bcadvf4"
                    android:inputType="phone"
                    android:lines="1"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="5dp"
                    android:background="#757575" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:gravity="left|center_horizontal"
                android:orientation="vertical">

                <com.bluebuddy.classes.MyTextView
                    android:id="@+id/idtxt5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_bcadvf5"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/bcac6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/txt_bcadvf6"
                    android:inputType="textWebEmailAddress"
                    android:lines="1"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="5dp"
                    android:background="#757575" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="15"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:id="@+id/btbcadvf"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:onClick="boatcadv"
                    android:background="@drawable/round_corner1"
                    android:text="@string/btn_cesbmt"
                    android:textColor="#FFFFFF"/>


                <!--<Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:onClick="cp6skp"
                    android:id="@+id/btncp6skp"
                    android:layout_height="45dp"
                    android:background="@drawable/round_corner1"
                    android:layout_marginLeft="15dp"
                    android:text="@string/btn_cpnxt"
                    android:textColor="#FFFFFF"/>-->
            </LinearLayout>

        </LinearLayout>

</ScrollView>

    </LinearLayout>

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_footer" />

</LinearLayout>